# apps/ced-portal-be/src/adapters/outbound/drizzle/schema/tables.ts
@@ -38,6 +38,8 @@ export const operator = pgTable("operator", {
   externalId: uuid("external_id").notNull(),
   id: char({ length: 26 }).primaryKey(),
   name: varchar({ length: 512 }).notNull(),
+  revocationMessage: varchar("revocation_message", { length: 4096 }),
+  revokedAt: timestamp("revoked_at", { withTimezone: true }),
   status: operatorStatusEnum().notNull(),
   updatedAt: timestamp("updated_at", { withTimezone: true })
     .notNull()
